[lib]
crate-type = ["staticlib"]

[package]
name = "fuzzy-matcher"
version = "0.3.7"
authors = ["Jinzhou Zhang <lotabout@gmail.com>"]
description = "Fuzzy Matching Library"
documentation = "https://docs.rs/fuzzy-matcher"
homepage = "https://github.com/lotabout/fuzzy-matcher"
repository = "https://github.com/lotabout/fuzzy-matcher"
readme  = "README.md"
keywords = ["fuzzy", "match", "text", "search"]
license = "MIT"
edition = "2018"
build = "build.rs"

[features]
default = []
compact = []

[build-dependencies]
swift-bridge-build = "0.1"

[dependencies]
thread_local = "1.0.0"
swift-bridge = "0.1"

[dev-dependencies]
termion = "1.5.1"

[profile.release]
debug = false
opt-level = "s"
strip = true
lto = true
